tests/exact_empty_objects/exact_empty_objects.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast object literal to object type because property `a` is missing in object literal [1] but exists in object
type [2]. [prop-missing]

   test.js:3:2
   3| ({}: {a: number, ...}); // ERROR
       ^^ [1]

References:
   test.js:3:6
   3| ({}: {a: number, ...}); // ERROR
           ^^^^^^^^^^^^^^^^ [2]



Found 1 error
